[gd_scene load_steps=20 format=3 uid="uid://xlf3saf5tm6e"]

[ext_resource type="VideoStream" path="res://images/background/purple-nebula-background.ogv" id="1_latmh"]
[ext_resource type="Texture2D" uid="uid://bqr3h3k41im03" path="res://images/start-scene/menu-title.svg" id="2_7cxd6"]
[ext_resource type="Texture2D" uid="uid://yolsays8s4jk" path="res://images/start-scene/btn-icon-start.svg" id="3_ypef2"]
[ext_resource type="Texture2D" uid="uid://dn7esiiyigatj" path="res://images/start-scene/btn-icon-start-select.svg" id="4_eimxy"]
[ext_resource type="Texture2D" uid="uid://bckjmmvhob7je" path="res://images/start-scene/btn-label-start.svg" id="4_yc4l4"]
[ext_resource type="Texture2D" uid="uid://p1vy17eaqdmg" path="res://images/start-scene/btn-icon-tutorial.svg" id="5_e1mje"]
[ext_resource type="Script" path="res://ui/menus/handle_main_menu.gd" id="5_wor2r"]
[ext_resource type="Texture2D" uid="uid://cri1xp862ppn2" path="res://images/start-scene/btn-label-tutorial.svg" id="6_wn0v8"]
[ext_resource type="Texture2D" uid="uid://3mhgjnmj42ky" path="res://images/start-scene/btn-icon-options.svg" id="7_cirhr"]
[ext_resource type="Texture2D" uid="uid://qt4q5cgcfi1t" path="res://images/start-scene/btn-label-start-select.svg" id="7_hets2"]
[ext_resource type="Texture2D" uid="uid://cwpnfaaj1k4ew" path="res://images/start-scene/btn-label-options.svg" id="8_fp5ne"]
[ext_resource type="Texture2D" uid="uid://cwocxnutfeut5" path="res://images/start-scene/btn-icon-tutorial-select.svg" id="9_3bvih"]
[ext_resource type="Texture2D" uid="uid://dx1cqjapo6r06" path="res://images/start-scene/btn-icon-exit.svg" id="9_vedll"]
[ext_resource type="Texture2D" uid="uid://cguax1fbaiecp" path="res://images/start-scene/btn-label-quit.svg" id="10_ew0m2"]
[ext_resource type="Texture2D" uid="uid://c4q2jcjr7ya7b" path="res://images/start-scene/btn-label-tutorial-select.svg" id="11_rccls"]
[ext_resource type="Texture2D" uid="uid://dnx1jansete6u" path="res://images/start-scene/btn-icon-exit-select.svg" id="13_kxd7s"]
[ext_resource type="Texture2D" uid="uid://cnj2hmbegy77i" path="res://images/start-scene/btn-label-quit-select.svg" id="14_2d5jb"]
[ext_resource type="PackedScene" uid="uid://btqfn1y8mwiih" path="res://ui/menus/exit_menu_scene.tscn" id="15_eu3by"]
[ext_resource type="PackedScene" uid="uid://c5nasjdg5ntsi" path="res://ui/menus/tutorial_popup_scene.tscn" id="17_nfse2"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("5_wor2r")

[node name="Background" type="VideoStreamPlayer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource("1_latmh")
autoplay = true
expand = true
loop = true

[node name="CenterTitle" type="CenterContainer" parent="."]
offset_top = 50.0
offset_right = 1920.0
offset_bottom = 436.0

[node name="Title" type="TextureRect" parent="CenterTitle"]
layout_mode = 2
texture = ExtResource("2_7cxd6")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = 515.0
offset_right = 662.0
offset_bottom = 1039.0
grow_vertical = 0
columns = 2

[node name="StartIcon" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ypef2")
texture_hover = ExtResource("4_eimxy")

[node name="CenterStartLabel" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="StartLabel" type="TextureButton" parent="GridContainer/CenterStartLabel"]
layout_mode = 2
texture_normal = ExtResource("4_yc4l4")
texture_hover = ExtResource("7_hets2")

[node name="TutorialIcon" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5_e1mje")
texture_hover = ExtResource("9_3bvih")

[node name="CenterTutorialLabel" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="TutorialLabel" type="TextureButton" parent="GridContainer/CenterTutorialLabel"]
layout_mode = 2
texture_normal = ExtResource("6_wn0v8")
texture_hover = ExtResource("11_rccls")

[node name="OptionsIcon" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("7_cirhr")

[node name="CenterOptionsLabel" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="OptionsLabel" type="TextureButton" parent="GridContainer/CenterOptionsLabel"]
layout_mode = 2
texture_normal = ExtResource("8_fp5ne")

[node name="QuitIcon" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("9_vedll")
texture_hover = ExtResource("13_kxd7s")

[node name="CenterQuitLabel" type="CenterContainer" parent="GridContainer"]
layout_mode = 2

[node name="QuitLabel" type="TextureButton" parent="GridContainer/CenterQuitLabel"]
layout_mode = 2
texture_normal = ExtResource("10_ew0m2")
texture_hover = ExtResource("14_2d5jb")

[node name="ExitMenuControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="exit_menu" parent="ExitMenuControl" instance=ExtResource("15_eu3by")]
position = Vector2(6, -1)

[node name="TutorialPopup" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tutorial_popup_scene" parent="TutorialPopup" instance=ExtResource("17_nfse2")]
position = Vector2(-1, 2)

[connection signal="mouse_entered" from="GridContainer/StartIcon" to="." method="_on_start_icon_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/StartIcon" to="." method="_on_start_icon_mouse_exited"]
[connection signal="pressed" from="GridContainer/StartIcon" to="." method="_on_start_game_label_pressed"]
[connection signal="mouse_entered" from="GridContainer/CenterStartLabel/StartLabel" to="." method="_on_start_label_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/CenterStartLabel/StartLabel" to="." method="_on_start_label_mouse_exited"]
[connection signal="pressed" from="GridContainer/CenterStartLabel/StartLabel" to="." method="_on_start_game_label_pressed"]
[connection signal="mouse_entered" from="GridContainer/TutorialIcon" to="." method="_on_tutorial_icon_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/TutorialIcon" to="." method="_on_tutorial_icon_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/CenterTutorialLabel/TutorialLabel" to="." method="_on_tutorial_label_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/CenterTutorialLabel/TutorialLabel" to="." method="_on_tutorial_label_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/QuitIcon" to="." method="_on_quit_icon_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/QuitIcon" to="." method="_on_quit_icon_mouse_exited"]
[connection signal="pressed" from="GridContainer/QuitIcon" to="." method="_on_quit_label_pressed"]
[connection signal="mouse_entered" from="GridContainer/CenterQuitLabel/QuitLabel" to="." method="_on_quit_label_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/CenterQuitLabel/QuitLabel" to="." method="_on_quit_label_mouse_exited"]
[connection signal="pressed" from="GridContainer/CenterQuitLabel/QuitLabel" to="." method="_on_quit_label_pressed"]
